--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 				<h4>Pick a category</h4>
 				<div class="options">
 					<label>
-						<input type="radio" name="category" id="category1" value="business" /> 
-						<span class="bubble business"></span>
-						<div>Business</div>
+						<input type="radio" name="category" id="category1" value="high" /> 
+						<span class="bubble high"></span>
+						<div>High</div>
 					</label>
 					<label>
-						<input type="radio" name="category" id="category2" value="personal" />
-						<span class="bubble personal"></span>
-						<div>Personal</div>
+						<input type="radio" name="category" id="category2" value="medium" />
+						<span class="bubble medium"></span>
+						<div>Medium</div>
 					</label>
 					<label>
-						<input type="radio" name="category" id="category3" value="recreation" />
-						<span class="bubble recreation"></span>
-						<div>Recreation</div>
+						<input type="radio" name="category" id="category3" value="low" />
+						<span class="bubble low"></span>
+						<div>Low</div>
 					</label>
 				</div>
 
