--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
 					</label>
 				</div>
 
+				<label for="day-select">Choose a day of the week:</label>
+				<select name="day" id="day-select">
+					<option value="">--Please choose an option--</option>
+					<option value="sunday">Sunday</option>
+					<option value="monday">Monday</option>
+					<option value="tuesday">Tuesday</option>
+					<option value="wednesday">Wednesday</option>
+					<option value="thursday">Thursday</option>
+					<option value="friday">Friday</option>
+					<option value="saturday">Saturday</option>
+				</select>
+
 				<input type="submit" value="Add todo" />
 			</form>
 		</section>
